<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddg_waitstep_at_waypoint_plugin</name>
  <version>0.0.0</version>
  <description>DDG Waitstep at waypoint</description>
  <maintainer email="tambevineet@gmail.com">vineet</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <build_depend>nav2_core</build_depend>
  <exec_depend>nav2_core</exec_depend>

  <export>
    <nav2_core plugin="${prefix}/ddg_waitstep_at_waypoint.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
